--- a/template/index.html
+++ b/template/index.html
@@ -239,7 +239,7 @@
                     </div>
                 {{/if}}
                   </div>
-                 <div class="opblock-content hide border-t border-gray-300 dark:border-gray-600 p-4">
+                 <div class="opblock-content border-t border-gray-300 dark:border-gray-600 p-4">
 
                 {{#if article.author}}<p class="text-gray-500 text-sm mb-3">Authored by: {{article.author}}</p>{{/if}}
 
