--- a/template/index.html
+++ b/template/index.html
@@ -191,6 +191,7 @@
                             <div class="text-gray-600 prose max-w-none">{{{nl2br description}}}</div>
                         {{/if}}
                     </div>
+                    {{#if template.groupsCollapsible}}
                     <button
                         aria-expanded="true"
                         class="expand-operation ml-4 p-1 rounded hover:bg-gray-300 dark:hover:bg-gray-600 transition-colors"
@@ -206,6 +207,7 @@
                             <path d="M17.418 6.109c.272-.268.709-.268.979 0s.271.701 0 .969l-7.908 7.83c-.27.268-.707.268-.979 0l-7.908-7.83c-.27-.268-.27-.701 0-.969.271-.268.709-.268.979 0L10 13.25l7.418-7.141z"></path>
                         </svg>
                     </button>
+                    {{/if}}
                 </h3>
                 <div class="opblock-tag-content">
                     {{#each articles}}
@@ -218,30 +220,48 @@
         </script>
 
         <script id="template-article" type="text/x-handlebars-template">
-            <article id="api-{{article.group}}-{{article.name}}-{{article.version}}" {{#if hidden}}class="hide opblock opblock-post border border-gray-200 rounded-lg mb-6 bg-white shadow-sm p-6"{{else}}class="border border-gray-200 rounded-lg mb-6 bg-white shadow-sm p-6"{{/if}} data-group="{{article.group}}" data-name="{{article.name}}" data-version="{{article.version}}">
-              <div class="opblock-summary opblock-summary-post border border-gray-300 dark:border-gray-600 rounded-lg overflow-hidden">  
-              <div class="mb-4">
-                    <h1 class="text-xl font-semibold"><span class="text-blue-600">{{underscoreToSpace article.groupTitle}}</span>{{#if article.title}} <span class="text-gray-400 mx-2">|</span> <span class="text-gray-900">{{article.title}}</span>{{/if}}</h1>
+            <article id="api-{{article.group}}-{{article.name}}-{{article.version}}" {{#if hidden}}class="hide opblock opblock-{{toLowerCase article.type}} border border-gray-200 rounded-lg mb-6 bg-white shadow-sm"{{else}}class="opblock opblock-{{toLowerCase article.type}} border border-gray-200 rounded-lg mb-6 bg-white shadow-sm"{{/if}} data-group="{{article.group}}" data-name="{{article.name}}" data-version="{{article.version}}">
+
+                {{#if template.endpointsCollapsible}}
+                <div class="opblock-summary opblock-summary-{{toLowerCase article.type}} cursor-pointer" role="button" tabindex="0">
+                    <div class="flex items-center p-4">
+                        <span class="opblock-summary-method opblock-summary-method-{{toLowerCase article.type}} mr-4">{{article.type}}</span>
+                        <span class="opblock-summary-path font-mono">{{article.url}}</span>
+                        {{#if article.title}}
+                        <span class="opblock-summary-description ml-4 text-gray-600">{{article.title}}</span>
+                        {{/if}}
+                    </div>
                 </div>
-                {{#if template.withCompare}}
-                    <div class="absolute top-4 right-4">
-                        <div class="dropdown">
-                            <button class="version btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown">
-                                <strong>{{article.version}}</strong>
-                            </button>
-                            <div class="versions dropdown-menu">
-                                <h6 class="dropdown-header">{{__ "compare changes to:"}}</h6>
-                                {{#each versions}}
-                                    <a class="dropdown-item version" href="#">{{this}}</a>
-                                {{/each}}
+                {{else}}
+                <div class="p-4 border-b border-gray-200">
+                    <div class="flex items-center mb-4">
+                        <span class="opblock-summary-method opblock-summary-method-{{toLowerCase article.type}} mr-4">{{article.type}}</span>
+                        <span class="opblock-summary-path font-mono font-semibold">{{article.url}}</span>
+                        {{#if article.title}}
+                        <span class="ml-4 text-gray-600">{{article.title}}</span>
+                        {{/if}}
+                    </div>
+                </div>
+                {{/if}}
+
+                <div class="opblock-content p-6" {{#if template.endpointsCollapsible}}style="display: none;"{{/if}}>
+                    {{#if template.withCompare}}
+                        <div class="absolute top-4 right-4">
+                            <div class="dropdown">
+                                <button class="version btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown">
+                                    <strong>{{article.version}}</strong>
+                                </button>
+                                <div class="versions dropdown-menu">
+                                    <h6 class="dropdown-header">{{__ "compare changes to:"}}</h6>
+                                    {{#each versions}}
+                                        <a class="dropdown-item version" href="#">{{this}}</a>
+                                    {{/each}}
+                                </div>
                             </div>
                         </div>
-                    </div>
-                {{/if}}
-                  </div>
-                 <div class="opblock-content border-t border-gray-300 dark:border-gray-600 p-4">
+                    {{/if}}
 
-                {{#if article.author}}<p class="text-gray-500 text-sm mb-3">Authored by: {{article.author}}</p>{{/if}}
+                    {{#if article.author}}<p class="text-gray-500 text-sm mb-3">Authored by: {{article.author}}</p>{{/if}}
 
                     {{#if article.deprecated}}
                         <div class="bg-red-50 border border-red-200 rounded-lg p-4 mb-4">
@@ -253,64 +273,47 @@
                     {{#if article.description}}
                         <div class="text-gray-700 mb-4 prose max-w-none">{{{nl2br article.description}}}</div>
                     {{/if}}
-                    <span class="method inline-block px-2 py-1 text-xs font-semibold text-white rounded uppercase meth-{{toLowerCase article.type}}">{{article.type}}</span>
-                    <pre
-                        data-type="{{toLowerCase article.type}}"
-                        data-prismjs-copy="{{__ "Copy"}}"
-                        data-prismjs-copy-error="{{__ "Press Ctrl+C to copy"}}"
-                        data-prismjs-copy-success="{{__ "copied!"}}"
-                        >
-                        <code class="language-http">{{article.url}}</code>
-                    </pre>
 
-                       
-                        {{#if article.permission}}
-                            <p>
-                                {{__ "Permission:"}}
-                                {{#each article.permission}}
-                                    {{name}}
-                                    {{#if title}}
-                                        <button type="button" class="btn btn-info btn-sm" data-title="{{title}}" data-content="{{nl2br description}}" data-html="true" data-bs-toggle="popover" data-placement="right" data-trigger="hover">
-                                            <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-                                        </button>
-                                    {{/if}}
-                                {{/each}}
-                            </p>
-                        {{/if}}
+                    {{#if article.permission}}
+                        <p>
+                            {{__ "Permission:"}}
+                            {{#each article.permission}}
+                                {{name}}
+                                {{#if title}}
+                                    <button type="button" class="btn btn-info btn-sm" data-title="{{title}}" data-content="{{nl2br description}}" data-html="true" data-bs-toggle="popover" data-placement="right" data-trigger="hover">
+                                        <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+                                    </button>
+                                {{/if}}
+                            {{/each}}
+                        </p>
+                    {{/if}}
 
-                        {{!-- CODE EXAMPLES IN TABS --}}
-                        {{#ifCond article.examples.length '>' 0}}
-                            <ul class="nav nav-tabs nav-tabs-examples" role="tablist">
-                                {{#each article.examples}}
-                                    <li class="nav-item">
-                                        <a class="nav-link{{#ifCond @index '==' 0}} active{{/ifCond}}" href="#examples-{{../id}}-{{@index}}" role="tab" data-bs-toggle="tab">{{title}}</a>
-                                    </li>
-                                {{/each}}
-                            </ul>
+                    {{#ifCond article.examples.length '>' 0}}
+                        <ul class="nav nav-tabs nav-tabs-examples" role="tablist">
+                            {{#each article.examples}}
+                                <li class="nav-item">
+                                    <a class="nav-link{{#ifCond @index '==' 0}} active{{/ifCond}}" href="#examples-{{../id}}-{{@index}}" role="tab" data-bs-toggle="tab">{{title}}</a>
+                                </li>
+                            {{/each}}
+                        </ul>
+                        <div class="tab-content">
+                            {{#each article.examples}}
+                                <div class="tab-pane{{#ifCond @index '==' 0}} active{{/ifCond}}" id="examples-{{../id}}-{{@index}}">
+                                    <pre data-type="{{type}}" data-prismjs-copy="{{__ "Copy"}}" data-prismjs-copy-error="{{__ "Press Ctrl+C to copy"}}" data-prismjs-copy-success="{{__ "copied!"}}"><code class="language-{{type}}">{{content}}</code></pre>
+                                </div>
+                            {{/each}}
+                        </div>
+                    {{/ifCond}}
 
-                            <div class="tab-content">
-                                {{#each article.examples}}
-                                    <div class="tab-pane{{#ifCond @index '==' 0}} active{{/ifCond}}" id="examples-{{../id}}-{{@index}}">
-                                        <pre
-                                            data-type="{{type}}"
-                                            data-prismjs-copy="{{__ "Copy"}}"
-                                            data-prismjs-copy-error="{{__ "Press Ctrl+C to copy"}}"
-                                            data-prismjs-copy-success="{{__ "copied!"}}"
-                                            ><code class="language-{{type}}">{{content}}</code></pre>
-                                        </div>
-                                  {{/each}}
-                            </div>
-                            {{/ifCond}}
+                    {{subTemplate "article-param-block" params=article.header _hasType=_hasTypeInHeaderFields section="header"}}
+                    {{subTemplate "article-param-block" params=article.parameter _hasType=_hasTypeInParameterFields section="parameter"}}
+                    {{subTemplate "article-query-block" params=article.query _hasType=_hasTypeInParameterFields section="query"}}
+                    {{subTemplate "article-body-block" params=article.body _hasType=_hasTypeInParameterFields section="body"}}
+                    {{subTemplate "article-param-block" params=article.success _hasType=_hasTypeInSuccessFields section="success"}}
+                    {{subTemplate "article-param-block" params=article.error _col1="Name" _hasType=_hasTypeInErrorFields section="error"}}
 
-                            {{subTemplate "article-param-block" params=article.header _hasType=_hasTypeInHeaderFields section="header"}}
-                            {{subTemplate "article-param-block" params=article.parameter _hasType=_hasTypeInParameterFields section="parameter"}}
-                            {{subTemplate "article-query-block" params=article.query _hasType=_hasTypeInParameterFields section="query"}}
-                            {{subTemplate "article-body-block" params=article.body _hasType=_hasTypeInParameterFields section="body"}}
-                            {{subTemplate "article-param-block" params=article.success _hasType=_hasTypeInSuccessFields section="success"}}
-                            {{subTemplate "article-param-block" params=article.error _col1="Name" _hasType=_hasTypeInErrorFields section="error"}}
-
-                            {{subTemplate "article-sample-request" article=article id=id}}
-                  </div>
+                    {{subTemplate "article-sample-request" article=article id=id}}
+                </div>
             </article>
         </script>
 
